"gpg --quiet --quick-gen-key" is not quiet: emits "key $FPR marked as ultimately trusted" to stderr.
Closed, ResolvedPublic

Assigned To
Authored By
dkg
Jul 17 2019, 1:01 AM
Subscribers

Description

gpg(1) says that --quiet means "Try to be as quiet as possible", but:

0 dkg@alice:/tmp/cdtemp.rxik89$ export GNUPGHOME=$(pwd)
0 dkg@alice:/tmp/cdtemp.rxik89$ gpg --quiet --batch --pinentry-mode=loopback --passphrase '' --quick-gen-key 'test user <test@example.net>' 2>stderr
0 dkg@alice:/tmp/cdtemp.rxik89$ cat stderr 
gpg: key 3F59B7E221089762 marked as ultimately trusted
0 dkg@alice:/tmp/cdtemp.rxik89$

This causes problems for me with test suites that are designed to consider any warnings sent to stderr as a sign of a failure (e.g. autopkgtest).

Details

Version
2.2.17

Related Objects